docs/tests/parser/functions/valid/GenericFuncWithGenericList.src
fn <T> swap<T, U>(T x, U y) {
}
