docs/tests/parser/functions/invalid/GenericFuncListMissingCloseAngle.src
fn <T> foo<T, U(T x, U y) {
}
